Refactor: Simplify repository structure, translate to English, remove unnecessary files

--- a/config.env.example
+++ b/config.env.example
@@ -1,119 +1,58 @@
-# MEXC Futures Bypass - Configuration Example
-# Скопируйте этот файл в config.env и заполните своими данными
+# MEXC Futures Bypass - Configuration
 
-# ===========================================
-# MEXC API Configuration
-# ===========================================
-
-# WEB Token (основной для обхода лимитов)
+# MEXC Credentials
 MEXC_WEB_TOKEN=your_web_token_here
-
-# API Keys (для данных и аналитики)
 MEXC_API_KEY=your_api_key_here
-MEXC_API_SECRET=your_api_secret_here
+MEXC_SECRET_KEY=your_secret_key_here
 
-# ===========================================
-# Trading Parameters
-# ===========================================
-
-# Основные настройки
-DEFAULT_LEVERAGE=20
-DEFAULT_POSITION_SIZE=100.0
-MAX_POSITIONS=5
+# Trading Configuration
+LEVERAGE=20
+MAX_POSITION_SIZE=1000
+STOP_LOSS_PCT=2.0
+TAKE_PROFIT_PCT=3.0
 
 # Risk Management
-MAX_DAILY_LOSS=5.0
-MAX_DRAWDOWN=10.0
-STOP_LOSS_PERCENTAGE=2.0
-TAKE_PROFIT_PERCENTAGE=3.0
+MAX_POSITIONS=3
+DAILY_LOSS_LIMIT=100
+MAX_DRAWDOWN_PCT=5.0
 
-# ===========================================
-# Bypass Settings
-# ===========================================
-
-# Настройки обхода лимитов
-ENABLE_WEB_TOKEN_BYPASS=true
-ENABLE_HFT_MODE=true
-ENABLE_ARBITRAGE_MODE=true
-
-# Скорость выполнения
-ORDER_TIMEOUT=5.0
-MAX_CONCURRENT_ORDERS=20
-REQUEST_DELAY=0.01
-
-# ===========================================
-# Smart Filters
-# ===========================================
-
-# Фильтр свежести цены
-ENABLE_PRICE_FRESHNESS=true
-PRICE_FRESHNESS_THRESHOLD=0.5
-
-# Фильтр влияния на рынок
-ENABLE_MARKET_IMPACT=true
-MARKET_IMPACT_THRESHOLD=0.5
-
-# Фильтр ликвидности
-ENABLE_LIQUIDITY_CHECK=true
-MIN_ORDERBOOK_VALUE=50
-
-# ===========================================
-# Arbitrage Settings
-# ===========================================
-
-# Минимальный спред для арбитража
-MIN_ARBITRAGE_SPREAD=3.0
-
-# Символы для арбитража
-ARBITRAGE_SYMBOLS=BTC_USDT,ETH_USDT,SOL_USDT,ADA_USDT
-
-# ===========================================
 # HFT Settings
-# ===========================================
+HFT_ORDER_COUNT=5
+HFT_BASE_QUANTITY=0.001
+HFT_EXECUTION_TIMEOUT=1.0
 
-# Настройки высокочастотной торговли
-HFT_ENABLED=true
-HFT_POSITION_SIZE=50.0
-HFT_MAX_HOLD_TIME=30
-HFT_PRICE_THRESHOLD=0.1
+# Arbitrage Settings
+ARBITRAGE_MIN_DIFFERENCE=0.5
+ARBITRAGE_MAX_POSITION=100
+ARBITRAGE_TIMEOUT=30
 
-# ===========================================
-# Monitoring & Logging
-# ===========================================
+# Liquidity Settings
+MIN_LIQUIDITY=1000
+ORDER_BOOK_DEPTH=20
+LIQUIDITY_CHECK_DEPTH=10
 
-# Уровень логирования
+# Performance Tracking
+TRACK_PERFORMANCE=true
+PERFORMANCE_UPDATE_INTERVAL=60
+METRICS_RETENTION_DAYS=30
+
+# Logging
 LOG_LEVEL=INFO
+LOG_FILE=logs/mexc_trading.log
+LOG_MAX_SIZE=10MB
+LOG_BACKUP_COUNT=5
 
-# Файл логов
-LOG_FILE=bypass.log
-
-# Мониторинг производительности
-ENABLE_PERFORMANCE_MONITORING=true
-
-# ===========================================
-# Telegram Integration (опционально)
-# ===========================================
-
-# Telegram Bot Token
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-
-# Telegram Chat ID для уведомлений
-TELEGRAM_CHAT_ID=your_chat_id
-
-# ===========================================
-# Advanced Settings
-# ===========================================
-
-# Базовый URL MEXC API
-MEXC_BASE_URL=https://contract.mexc.com
-
-# User Agent
-USER_AGENT=MEXC-Bypass/1.0
-
-# Retry настройки
+# API Settings
+API_TIMEOUT=30
 MAX_RETRIES=3
-RETRY_DELAY=0.5
+RETRY_DELAY=1.0
 
-# WebSocket настройки
-WS_RECONNECT_INTERVAL=5.0
-WS_PING_INTERVAL=30.0
+# Security
+ENCRYPT_CREDENTIALS=true
+ENCRYPTION_KEY=your_encryption_key_here
+TOKEN_REFRESH_INTERVAL=3600
+
+# Development
+DEBUG_MODE=false
+VERBOSE_LOGGING=false
+MOCK_TRADING=false
