--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-# MEXC Futures Bypass - .gitignore
+# MEXC Futures Bypass - Git Ignore
+
+# Environment variables
+.env
+config.env
 
 # Python
 __pycache__/
@@ -21,156 +25,35 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
 # Virtual environments
 venv/
 env/
 ENV/
-env.bak/
-venv.bak/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
-
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
 
 # Logs
 *.log
 logs/
-log/
 
-# Configuration
-config.env
-.env
-*.env
-
-# Data
-data/
+# Database
 *.db
 *.sqlite
-*.sqlite3
 
-# Cache
-.cache/
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# Secrets
-secrets/
-*.key
-*.pem
-*.p12
-*.pfx
+# OS
+.DS_Store
+Thumbs.db
 
 # Temporary files
-tmp/
-temp/
 *.tmp
 *.temp
 
-# Backup files
-*.bak
-*.backup
-*.old
-
-# Documentation build
-docs/_build/
-site/
-
-# Coverage reports
-htmlcov/
-.coverage
-.coverage.*
-coverage.xml
-*.cover
-.hypothesis/
-
-# Translations
-*.mo
-*.pot
-
-# Django
-*.log
-local_settings.py
-db.sqlite3
-
-# Flask
-instance/
-.webassets-cache
-
-# Scrapy
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# Trading specific
-trading_logs/
-positions/
-backups/
-screenshots/
+# Secrets
+secrets/
+keys/
+tokens/
